# web-dev-course-fall-2022

./: .gitignore  README.md  hw4-dds.md  pyproject.toml
app/auth/: router.py
app/auth/tests/: __init__.py
app/playlist/: router.py  types.py
app/playlist/tests/: __init__.py
app/songs/: router.py
app/songs/tests/: __init__.py
app/types/: user.py
fastapi/: pyproject.toml
fastapi/app/: db.py  main.py
fastapi/app/auth/: types.py
fastapi/app/auth/tests/: __init__.py
fastapi/app/songs/: router.py
fastapi/app/songs/tests/: __init__.py
fastapi/app/tests/: tests_integration.py
fastapi/app/types/: playlist.py
grpc/: .flake8  .gitignore  README.md  pyproject.toml
grpc/app/: AssetServicer.py  client.py  server.py  utils.py
grpc/app/tests/: __init__.py
grpc/proto/: messages.proto  services.proto
src/main/: app.py
src/main/types/: __init__.py
