[tool.poetry]
name = "web-dev-course-fall-2022"
version = "0.1.0"
description = ""
authors = ["MrFang <bat312@yandex.ru>"]
readme = "README.md"
packages = [{include = "src/main"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
