[tool.poetry]
name = "web-dev-course-fall-2022-grpc"
version = "0.1.0"
description = ""
authors = ["MrFang <bat312@yandex.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.49.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
grpcio-tools = "^1.49.1"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
